# Automex

./: README.md  automex.db  package-lock.json  package.json
Backend/: .env.example  .gitignore  GDRIVE_ENV_SETUP.md  GDRIVE_QUICK_START.txt  IMAGEKIT_SETUP.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  pyproject.toml  run.py  setup_gdrive.py
Backend/src/automex_backend/: __init__.py  config.py  database.py  main.py
Backend/src/automex_backend/api/: __init__.py  auth.py  bookings.py  services.py  uploads.py
Backend/src/automex_backend/models/: __init__.py  booking.py  service.py  user.py
Backend/src/automex_backend/schemas/: __init__.py  booking.py  service.py  user.py
Backend/src/automex_backend/services/: __init__.py  gdrive_config.py  imagekit_service.py
Frontend/: AUTHENTICATION_SETUP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: AboutUs.tsx  CuratedServices.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Login.tsx  Navigation.tsx  Register.tsx  Reviews.tsx  ServiceCard.tsx  ServicesGrid.tsx  SummerServices.tsx  TabNavigation.tsx
Frontend/src/contexts/: AuthContext.tsx
Frontend/src/hooks/: use-in-view.ts
Frontend/src/pages/: ContactUs.tsx  Index.tsx
Frontend/src/services/: api.ts  authService.ts
