[project]
name = "automex-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TheDuocoder", email = "your.email@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.118.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "google-api-python-client>=2.186.0",
    "google-auth>=2.42.1",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "imagekitio>=4.2.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
automex-backend = "automex_backend.main:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
